# hockey

./: README.md  environment.yml  requirements.txt
nhl_proj_tools/: setup.cfg
nhl_proj_tools/src/nhl_proj_tools/: conventions.py  data_utils.py
notebooks/: Interactive_Tool.ipynb  M2_XGBoost_Hparam_Opt_Results.ipynb  M2_comet_urls.ipynb  M2_detect-feat-correlation.ipynb  M2_feat-selection_trials.ipynb  M2_visualizing_figures.ipynb  Milestone_2-feat-eng-draft.ipynb  Milestone_2_Q4.5_save_dataframe.ipynb  Milestone_2_Visualizations.ipynb  Question 1 sample.ipynb  README.md  Shot_Maps_App.ipynb  Shots_per_Hour.ipynb  Simple_Viz.ipynb  Tidy_data_usage.ipynb  WarmUpNotebook.ipynb  WarmUpTest.ipynb  shot_maps -TL Notes.ipynb  shot_maps.ipynb  shot_maps_Sara_trial.ipynb  shot_maps_Tim_final.ipynb  tidy_data.py
notebooks/Milestone_1/: Interactive_Tool.ipynb  Simple_Viz.ipynb
src/data/: WarmUp.py  download_data.py  process_data_for_training.py  split_data_for_training.py  team_data.py  tidy_data.py
src/training/: Final_Evaluation.py  NN_Model_Adv.py  NN_Model_Baseline.py  NN_Model_Basic.py  NN_Model_Distance.py  NN_Model_Train.py  NN_Plot_Gen.py  adv_logistic_regression.py  adv_logistic_regression_SMOTE.py  adv_logistic_regression_non_corr_feats.py  adv_models_feature_correlation_selection.py  adv_models_feature_selection_Lasso.py  adv_models_feature_selection_SHAP.py  adv_models_hparams.py  adv_models_optimal.py  adv_models_simple.py  adv_models_xgboost_SMOTE.py  baseline.py  baseline_logistic_regression.py  generate_figures.py  generate_figures_mod.py  preprocessing.py  (+2 more)
