[metadata]
name = nhl-proj-tools
version = 0.0.1
author = Jake R. White
author_email = jwhite2217@gmail.com
description = A collection of tools for working with the NHL API and 6758 project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/6758-Project/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src